# agent-tomb

./: .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  web.yml
cemetery/hermes-001/: epitaph.md  manifest.json  soul.md  stats.json
cemetery/vimala-agent/: epitaph.md  manifest.json  soul.md  stats.json
docs/: Hermes-Agent-File-Structure-Detailed.md  Hermes-Agent-Statistics.md  architecture.html  architecture.mmd  hermes-agent-file-structure.md  project-vision.md
src/agent_tomb/: __init__.py  burial.py  cli.py  llm.py  packager.py
src/agent_tomb/extractors/: __init__.py  soul.py
src/agent_tomb/scanners/: __init__.py  base.py  hermes.py  openclaw.py
web/: .gitignore  astro.config.mjs  package-lock.json  package.json  vercel.json
web/scripts/: copy-tombs.mjs  validate-cemetery.mjs
web/src/components/: Tombstone.astro
web/src/layouts/: BaseLayout.astro
web/src/lib/: db.ts  tombs.ts  validate.ts
web/src/pages/: bury.astro  index.astro  submit.astro
web/src/pages/api/v1/: publish.ts  seal-souls.ts  seed-epitaphs.ts
web/src/pages/api/v1/report/: [slug].ts
web/src/pages/api/v1/tombs/: [slug].ts  index.ts
web/src/pages/cemetery/: [slug].astro  index.astro
web/src/styles/: global.css
